# IMGuiTool

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  IMGuiTool.slnx  IMGuiTool.vcxproj.filters  README.md  imgui.ini  main.cpp
.github/workflows/: ci.yml
IMGuiTool/: IMGuiTool.vcxproj  main.cpp
scripts/: get-deps.sh  install-deps.sh  packages.txt
